S4: schedule automatic extract and design jobs
